set transparent border to the all links ---> stop jumping elements on hover

--- a/donate_your_stuff/src/scss/App.scss
+++ b/donate_your_stuff/src/scss/App.scss
@@ -1,189 +1,4 @@
 @import "reset.scss";
 @import "./settings/_colors.scss";
 @import "./settings/_fonts.scss";
-
-@mixin containerHome {
-  margin: 0 143px;
-  float: right;
-}
-
-body {
-  font-family: $font-base;
-  background-color: white;
-  color: $color_main_font;
-}
-
-p {
-  color: white;
-  font: 35px bold;
-  font-family: $font-alt;
-  text-align: center;
-}
-
-.header {
-
-  background-image: url("../assets/Home-Hero-Image.jpg");
-  background-position: -480px;
-  background-repeat: no-repeat;
-}
-
-
-//style for mainUpperMenu
-
-.MainUpperMenuBar {
-  @include containerHome;
-  //margin: 0 143px;
-  //float: right;
-
-  li {
-    display: inline-block;
-    margin-top: 37px;
-    padding: 13px 10px 13px 10px;
-    font-size: 13px;
-    font-weight: 400;
-    text-decoration: none;
-    cursor: pointer;
-
-    &:first-child {
-      margin-right: 19px;
-    }
-
-    a {
-      text-decoration: none;
-      color: $color_main_font;
-    }
-  }
-
-  li:hover {
-    border: 1px solid $color_bgr_three_col;
-    padding: 13px 10px 13px 10px;
-
-    &:first-child {
-      margin-right: 19px;
-    }
-
-    a {
-
-    }
-  }
-}
-
-
-//style for mainMenu
-
-.mainMenu {
-  @include containerHome;
-
-
-}
-
-.headerMenu {
-
-  margin-top: 16px;
-
-  li {
-    font-size: 18px;
-    font-family: $font-base;
-    font-weight: 400;
-    display: inline-block;
-    margin-right: 20px;
-    padding: 12px 20px 12px 20px;
-    &:last-child {
-      margin-right: 0;
-    }
-
-    text-decoration: none;
-    cursor: pointer;
-
-    &:hover {
-      border: 1px solid #6c6c6c;
-      padding: 12px 20px 12px 20px;
-    }
-
-
-    a {
-      text-decoration: none;
-      color: $color_main_font;
-    }
-
-    //color:#828282;
-
-  }
-}
-
-//style for active links in mainMenuBar
-.headerMenu > .activeLink {
-  color: deeppink;
-  cursor: pointer;
-}
-
-.callToAction {
-
-  p {
-    color: $color_main_font;
-    font-size: 35px;
-  }
-
-
-}
-
-.btnList {
-  margin-bottom: 100px;
-
-  li {
-    display: inline-block;
-    border: 1px solid $color_main_font;
-    padding: 25px;
-    text-align: center;
-
-    a {
-      text-decoration: none;
-    }
-
-    &:first-child {
-      margin-right: 35px;
-    }
-  }
-}
-
-//#homeAboutUs:active{
-//  color: deeppink;
-//  cursor: pointer;
-//}
-//
-//#homeContactUs:active{
-//  color: deeppink;
-//  cursor: pointer;
-//}
-//
-//#homeFooter:active{
-//  color: deeppink;
-//  cursor: pointer;
-//}
-//
-//#homeThreeCol:active{
-//  color: deeppink;
-//  cursor: pointer;
-//}
-//
-//#homeWhoWeHelp:active{
-//  color: deeppink;
-//  cursor: pointer;
-//}
-
-.containerStyle {
-  margin: 0;
-
-}
-
-.headerBtn {
-  border: 1px solid #bcbcbc;
-  background-color: white;
-  padding: 25px;
-
-}
-
-
-.mainHeaderText {
-  margin-top: 350px;
-}
+@import "home.scss";
